--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <title>@7devquyet</title>
     <style>
         :root {
-            
             --bg-color-light: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
             --bg-color-dark: linear-gradient(135deg, #2b1055, #7597de);
             --text-color-light: black;
             --text-color-dark: white;
             --card-bg-light: rgba(255, 255, 255, 0.8);
             --card-bg-dark: rgba(0, 0, 0, 0.7);
-
+            --border-color-light: black;
+            --border-color-dark: white;
         }
 
         body {
@@ -41,6 +41,8 @@
             background-color: var(--card-bg-light);
             padding: 20px;
             border-radius: 15px;
+            transition: border 0.3s;
+            border: 2px solid var(--border-color-light); /* Default light mode border */
         }
 
         .avatar {
@@ -62,7 +64,8 @@
             margin: 10px 0;
             padding: 10px;
             border-radius: 5px;
-            transition: background 0.3s;
+            transition: background 0.3s, border 0.3s;
+            border: 2px solid var(--border-color-light); /* Default light mode border */
         }
 
         .social-links a:hover {
@@ -107,10 +110,12 @@
 
         .dark-mode .container {
             background-color: var(--card-bg-dark);
+            border-color: var(--border-color-dark); /* Dark mode border */
         }
 
         .dark-mode .social-links a {
             color: var(--text-color-dark);
+            border-color: var(--border-color-dark); /* Dark mode border */
         }
     </style>
 </head>
