--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
     <div class="container">
         <img src="https://avatars.githubusercontent.com/u/95666213?v=4" alt="Avatar" class="avatar">
-        <h1>@vuducquyet</h1>
+        <h1>@7devquyet</h1>
         
         <button class="mode-switch" id="modeSwitch" aria-label="Switch Mode">
             <img src="https://cdn-icons-png.flaticon.com/512/11579/11579720.png" alt="Toggle Mode" id="modeIcon">
